--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -16,9 +16,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@daehwahap/eslint-config": "workspace:*",
     "@repo/app": "workspace:^",
-    "@next/eslint-plugin-next": "^14.1.1",
-    "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
