--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -24,6 +24,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@daehwahap/eslint-config": "workspace:*",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
