--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -38,6 +38,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@daehwahap/eslint-config": "workspace:*",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/schematics": "^10.0.0",
@@ -48,11 +49,6 @@
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
