--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,8 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.13.0",
+    "@trpc/server": "^10.45.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.4",
+    "zod-prisma-types": "^3.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
