--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "server": "pnpm --filter server start:dev",
-    "prisma": "pnpm --filter server prisma init",
-    "webview": "pnpm --filter webview",
-    "app": "pnpm --filter app"
+    "server": "pnpm -F server",
+    "webview": "pnpm -F webview",
+    "app": "pnpm - app"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
