--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "@repo/app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@trpc/client": "^10.45.2",
     "react": "18.2.0",
     "react-native": "0.74.0"
   },
@@ -22,6 +23,7 @@
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
     "@types/react": "^18.2.6",
+    "@repo/server": "workspace:^",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
