--- a/apps/app/android/app/build.gradle
+++ b/apps/app/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.app"
+    namespace "com.pinit.dev"
     defaultConfig {
-        applicationId "com.app"
+        applicationId "com.pinit.dev"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
