--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "server": "pnpm -F server",
+    "webview": "pnpm -F webview",
+    "app": "pnpm -F app"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
