--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@trpc/client": "^10.45.2",
     "react": "18.2.0",
     "react-native": "0.74.0"
@@ -22,8 +23,8 @@
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.2.6",
     "@repo/server": "workspace:^",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
