--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -37,8 +37,7 @@
     "babel-jest": "^29.6.3",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "react-test-renderer": "18.2.0"
   },
   "engines": {
     "node": ">=18"
