--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@daehwahap/app",
+  "name": "@pinit/app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -27,7 +27,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@daehwahap/eslint-config": "workspace:*",
+    "@pinit/eslint-config": "workspace:*",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
