--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/server",
+  "name": "@pinit/server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -38,7 +38,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@daehwahap/eslint-config": "workspace:*",
+    "@pinit/eslint-config": "workspace:*",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/schematics": "^10.0.0",
