--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@daehwahap/eslint-config",
+  "name": "@pinit/eslint-config",
   "version": "0.0.0",
   "private": true,
   "files": [
