--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@trpc/client": "^10.45.2",
+    "lodash-es": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-dotenv": "^3.4.11",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
