--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-mmkv": "^2.12.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
