--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@trpc/client": "^10.45.2",
+    "@tanstack/react-query": "^5.32.0",
+    "@trpc/client": "11.0.0-rc.354",
+    "@trpc/react-query": "11.0.0-rc.354",
+    "@trpc/server": "11.0.0-rc.354",
     "react": "18.2.0",
     "react-native": "0.74.0"
   },
@@ -22,8 +25,8 @@
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.2.6",
     "@repo/server": "workspace:^",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
