--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,7 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.13.0",
-    "@trpc/server": "^10.45.2",
+    "@tanstack/react-query": "^5.32.0",
+    "@trpc/client": "11.0.0-rc.354",
+    "@trpc/react-query": "11.0.0-rc.354",
+    "@trpc/server": "11.0.0-rc.354",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.4",
