--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,12 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.32.0",
-    "@trpc/client": "11.0.0-rc.354",
-    "@trpc/react-query": "11.0.0-rc.354",
-    "@trpc/server": "11.0.0-rc.354",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-dotenv": "^3.4.11",
