--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@trpc/client": "^10.45.2",
+    "@webview-bridge/react-native": "^1.4.1",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,8 +24,8 @@
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.2.6",
     "@repo/server": "workspace:^",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
