--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@repo/app": "workspace:^",
+    "@webview-bridge/react": "^1.4.1",
+    "@webview-bridge/web": "^1.4.1",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
