--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -20,8 +20,8 @@
     "react-native": "0.74.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-mmkv": "^2.12.2",
-    "react-native-webview": "^13.8.6"
-    "rxjs": "^7.8.1",
+    "react-native-webview": "^13.8.6",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
