--- a/apps/webview/tsconfig.json
+++ b/apps/webview/tsconfig.json
@@ -7,6 +7,8 @@
       }
     ]
   },
+  "declaration": false,
+  "declarationMap": false,
   "include": [
     "next-env.d.ts",
     "next.config.js",
