Feat/webview bridge (#16)
* wip: webview-bridge

* resolve conflict

* #14
wip: 웹뷰 브릿지
타입 추론이 제대로 안돼서 라이브러리 이슈 올려뒀음

* wip

* wip

* #13
fix: webview-birdge 타입 추론문제 해결

--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@webview-bridge/react": "^1.4.1",
+    "@webview-bridge/web": "^1.4.1",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@repo/app": "workspace:^",
     "@next/eslint-plugin-next": "^14.1.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
