--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -15,10 +15,12 @@
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@webview-bridge/react-native": "^1.4.1",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-mmkv": "^2.12.2",
+    "react-native-webview": "^13.8.6",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
