--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -31,11 +31,11 @@
     "axios": "^1.6.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "prisma": "^5.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.4",
-    "zod-prisma-types": "^3.1.6",
-    "rxjs": "^7.8.1"
+    "zod-prisma-types": "^3.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
