--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pinit/server": "workspace:^",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
@@ -31,7 +32,6 @@
     "@react-native/babel-preset": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
-    "@repo/server": "workspace:^",
     "@types/react": "^18.2.6",
     "@pinit/server": "workspace:^",
     "@types/react-test-renderer": "^18.0.0",
