--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@pinit/app": "workspace:^",
     "@webview-bridge/react": "^1.4.1",
     "@webview-bridge/web": "^1.4.1",
     "next": "^14.1.1",
@@ -18,7 +19,6 @@
   "devDependencies": {
     "@pinit/eslint-config": "workspace:*",
     "@pinit/typescript-config": "workspace:*",
-    "@repo/app": "workspace:^",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19"
