[#3] eslint , prettier, typescript 설정 (#9)
* feat: app의 name 변경

* chore: eslint 설치

* feat: eslint 파일 추가

* feat: @repo/eslint-config 제거

* feat: webview에 eslint 적용

* feat: webview에 설치된 eslint 제거

* root의 eslint를 사용하게 하기 위함

* feat: app에서 eslint 제거

* root의 eslint를 사용하게 하기 위함

* feat: react-native eslint 설정

* feat: react-native devDependency에 eslint-config 추가

* feat: nest eslint 설정

* chore: 불필요한 파일 제거

* chore: 각 폴더에 생성된 typescript 제거

* chore: root에 typescript 추가

* chore: @repo → @pinit

* feat: root에 prettier 파일 생성

* chore: 각 app에 설정된 prettier 제거하고 root의 prettier 적용되게 변경

* fix: resolve conflict

* chore: podfile.lock 업데이트

* chore: server에 중복된 rxjs 제거 및 prisma 추가

* chore: @repo → @pinit 으로 변경 및 devDependency를 dependency로 이동

* chore: prisma dto 포맷팅

* chore: pnpm-lock 업데이트

--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/webview",
+  "name": "@pinit/webview",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@pinit/app": "workspace:^",
     "@webview-bridge/react": "^1.4.1",
     "@webview-bridge/web": "^1.4.1",
     "next": "^14.1.1",
@@ -16,15 +17,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@repo/app": "workspace:^",
-    "@next/eslint-plugin-next": "^14.1.1",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@types/eslint": "^8.56.5",
+    "@pinit/eslint-config": "workspace:*",
+    "@pinit/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
-    "typescript": "^5.3.3"
+    "@types/react-dom": "^18.2.19"
   }
 }
