chore: nodejs sentry 관련 라이브러리 설치

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,6 +27,8 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.13.0",
+    "@sentry/node": "^7.112.2",
+    "@sentry/profiling-node": "^7.112.2",
     "@trpc/server": "^10.45.2",
     "axios": "^1.6.8",
     "passport": "^0.7.0",
