--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -16,6 +16,7 @@
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@webview-bridge/react-native": "^1.4.2",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-dotenv": "^3.4.11",
