--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pinit/server": "workspace:^",
+    "@pinit/shared": "workspace:^",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
