--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "@pinit/typescript-config": "workspace:*",
     "prettier": "^3.2.5",
     "turbo": "latest",
-    "typescript": "5.4.3"
+    "typescript": "5.4.3",
+    "eslint": "8.57.0"
   },
   "engines": {
     "node": ">=18"
-  },
-  "dependencies": {
-    "eslint": "8.57.0"
   }
 }
