--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@9.0.4",
+  "exports": {
+    "./utils": "./src/utils/index.ts"
+  },
   "scripts": {
     "lint": "eslint ."
   },
