--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@pinit/app": "workspace:^",
     "@pinit/shared": "workspace:^",
+    "@pinit/server": "workspace:^",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
     "@webview-bridge/react": "^1.4.2",
     "@webview-bridge/web": "^1.4.2",
     "next": "^14.1.1",
