--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@pinit/app": "workspace:^",
-    "@pinit/shared": "workspace:^",
     "@pinit/server": "workspace:^",
+    "@pinit/shared": "workspace:^",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@webview-bridge/react": "^1.4.2",
     "@webview-bridge/web": "^1.4.2",
+    "framer-motion": "^11.1.7",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
