--- a/apps/webview/tsconfig.json
+++ b/apps/webview/tsconfig.json
@@ -9,6 +9,13 @@
     "declaration": false,
     "declarationMap": false
   },
-  "include": ["next-env.d.ts", "next.config.js", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "next.config.js",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/_provider/GlobalComponentProvider"
+  ],
   "exclude": ["node_modules"]
 }
