--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,6 +13,9 @@
     "@pinit/server": "workspace:^",
     "@pinit/shared": "workspace:^",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
@@ -22,6 +25,8 @@
     "react-native": "0.74.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-mmkv": "^2.12.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-webview": "^13.8.6",
     "rxjs": "^7.8.1"
   },
