--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -33,15 +33,20 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.24.4",
     "@pinit/eslint-config": "workspace:*",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
+    "@rnx-kit/metro-config": "^1.3.15",
+    "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.6.3",
+    "path": "^0.12.7",
+    "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "18.2.0"
   },
   "engines": {
