--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -24,7 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-mmkv": "^2.12.2",
+    "react-native-mmkv": "3.0.0-beta.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-webview": "^13.8.6",
@@ -33,7 +34,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.24.4",
     "@pinit/eslint-config": "workspace:*",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/metro-config": "0.74.81",
