--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,30 +13,40 @@
     "@pinit/server": "workspace:^",
     "@pinit/shared": "workspace:^",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@webview-bridge/react-native": "^1.4.2",
     "react": "18.2.0",
-    "react-native": "0.74.0",
+    "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-mmkv": "^2.12.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-webview": "^13.8.6",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.24.4",
     "@pinit/eslint-config": "workspace:*",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
+    "@rnx-kit/metro-config": "^1.3.15",
+    "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.6.3",
+    "path": "^0.12.7",
+    "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "18.2.0"
   },
   "engines": {
