chore: alias 절대 경로 설정에 따른 관련 eslint rule 수정

--- a/apps/webview/tsconfig.json
+++ b/apps/webview/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "@pinit/typescript-config/nextjs.json",
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/shared/*": ["./shared/*"],
+    },
     "plugins": [
       {
         "name": "next"
