--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -13,7 +12,6 @@
   "dependencies": {
     "@pinit/server": "workspace:^",
     "@pinit/shared": "workspace:^",
-    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -25,7 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-mmkv": "3.0.0-beta.5",
+    "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-webview": "^13.8.6",
@@ -33,13 +31,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.24.5",
     "@babel/preset-env": "^7.20.0",
     "@pinit/eslint-config": "workspace:*",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
-    "@rnx-kit/metro-config": "^1.3.15",
-    "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
+    "@react-native-community/cli-platform-android": "^13.6.6",
+    "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native/codegen": "^0.74.83",
+    "@react-native/gradle-plugin": "^0.74.83",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
