--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -18,10 +18,15 @@
     "@trpc/react-query": "^10.45.2",
     "@webview-bridge/react": "^1.4.2",
     "@webview-bridge/web": "^1.4.2",
+    "accept-language": "^3.0.18",
     "framer-motion": "^11.1.7",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1"
   },
   "devDependencies": {
     "@pinit/eslint-config": "workspace:*",
