wip: app build안되는 이슈 수정 중

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,7 +21,11 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@webview-bridge/react-native": "^1.4.2",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "react": "18.2.0",
+    "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-mmkv": "^2.12.2",
