--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -22,12 +22,12 @@
     "@trpc/server": "^10.45.2",
     "@webview-bridge/react-native": "^1.4.2",
     "i18next": "^23.11.4",
-    "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-localize": "^3.1.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
