wip podfile clean 안됨..

--- a/apps/app/app.json
+++ b/apps/app/app.json
@@ -1,4 +1,5 @@
 {
-  "name": "app",
-  "displayName": "app"
+  "name": "pinit",
+  "displayName": "pinit",
+  "plugins": ["@notifee/react-native"]
 }
