--- a/apps/app/ios/Podfile
+++ b/apps/app/ios/Podfile
@@ -1,3 +1,5 @@
+$FirebaseSDKVersion = '10.25.0'
+
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -11,11 +13,16 @@ prepare_react_native_project!
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
 end
 
 target 'app' do
   config = use_native_modules!
+
+  pod 'Firebase', :modular_headers => true;
+  pod 'FirebaseCore', :modular_headers => true;
+  pod 'GoogleUtilities', :modular_headers => true;
 
   use_react_native!(
     :path => config[:reactNativePath],
