--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@pinit/server": "workspace:^",
     "@pinit/shared": "workspace:^",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/messaging": "^20.0.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -52,6 +55,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.6.3",
     "path": "^0.12.7",
+    "pod-install": "^0.2.2",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "18.2.0"
   },
