feat: webview의 tsconfig에 app 폴더 절대경로 설정 추가

--- a/apps/webview/tsconfig.json
+++ b/apps/webview/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": "./src",
     "paths": {
       "@/shared/*": ["./shared/*"],
-      "@/i18n/*": ["./i18n/*"]
+      "@/i18n/*": ["./i18n/*"],
+      "@/app/*": ["./app/*"]
     },
     "plugins": [
       {
