--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/shared/*": ["./shared/*"],
+      "@/i18n/*": ["./i18n/*"],
+      "@/screens/*": ["./screens/*"]
+    }
+  }
 }
