--- a/apps/app/ios/Podfile
+++ b/apps/app/ios/Podfile
@@ -7,6 +7,8 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
+
+
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
@@ -40,8 +42,7 @@ target 'app' do
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      :mac_catalyst_enabled => false
     )
   end
 end
