--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -38,6 +38,7 @@
     "prisma": "^5.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "uuid": "^10.0.0",
     "zod": "^3.23.4",
     "zod-prisma-types": "^3.1.6"
   },
@@ -53,6 +54,7 @@
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^9.0.8",
     "jest": "^29.5.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
