--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "create-migration-sql": "pnpx prisma migrate dev --create-only",
+    "migration-deploy": "pnpx prisma migrate deploy",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
