fix: inviteUser 테이블에 User relation연결 schema상에서만 연결처럼 보이고 실제 db에서는 연결 안됨 실제 연결시키려면 schema.prisma에서 relationMode를 foreignKeys로 설정해야함

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "create-migration": "pnpx prisma migrate dev --create-only",
     "deploy-migration": "pnpx prisma migrate deploy",
+    "prisma-generate": "pnpx prisma generate",
+    "prisma-format": "pnpx prisma format",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
