--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/shared/*": ["./shared/*"],
-      "@/i18n/*": ["./i18n/*"],
-      "@/screens/*": ["./screens/*"]
+      "@/*": ["src/*"]
     }
   }
 }
