--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinit/server": "workspace:^",
     "@pinit/shared": "workspace:^",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -40,10 +41,10 @@
     "@babel/runtime": "^7.24.4",
     "@pinit/eslint-config": "workspace:*",
     "@react-native-community/cli-platform-android": "^13.6.6",
-    "@react-native/babel-preset": "0.73.21",
+    "@react-native/babel-preset": "^0.73.21",
     "@react-native/gradle-plugin": "^0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
+    "@react-native/metro-config": "^0.73.5",
+    "@react-native/typescript-config": "^0.73.1",
     "@rnx-kit/metro-config": "^1.3.15",
     "@rnx-kit/metro-resolver-symlinks": "^0.1.36",
     "@types/react": "^18.2.6",
