feat: superjson을 commonjs로 컴파일하도록 변경하기 위해 로컬에서 만든 파일을 바라보도록 변경

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -42,6 +42,7 @@
     "prisma": "^5.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "superjson": "https://github.com/11t518s/superjson",
     "uuid": "^10.0.0",
     "zod": "^3.23.4",
     "zod-prisma-types": "^3.1.6"
