--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-webview": "^13.8.6",
+    "superjson": "https://github.com/11t518s/superjson",
     "rxjs": "^7.8.1",
     "zustand": "^4.5.4"
   },
