--- a/apps/webview/package.json
+++ b/apps/webview/package.json
@@ -26,7 +26,8 @@
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.1.1"
+    "react-i18next": "^14.1.1",
+    "superjson": "https://github.com/11t518s/superjson"
   },
   "devDependencies": {
     "@pinit/eslint-config": "workspace:*",
